--- a/Engine/ColorVision.Engine/Templates/Jsons/PoiAnalysis/DisplayPoiAnalysis.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/PoiAnalysis/DisplayPoiAnalysis.xaml
@@ -11,9 +11,17 @@
     <Grid>
         <StackPanel>
             <DockPanel Margin="0,2">
+                <TextBlock Text="ROI" Width="60"/>
+                <ComboBox  x:Name="ComboxPoiTemplate2"  Width="130" HorizontalAlignment="Left" SelectedIndex="{Binding TemplatePoiSelectedIndex}" Style="{StaticResource ComboBox.Small}" ItemsSource="{Binding PoiParams}" SelectedValuePath="Value"  DisplayMemberPath="Key" />
+                <Grid Width="20" Margin="5,0" HorizontalAlignment="Left">
+                    <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="15"  Foreground="{DynamicResource GlobalTextBrush}"/>
+                    <Button  Width="20" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" Command="{Binding OpenTemplatePoiCommand}"/>
+                </Grid>
+            </DockPanel>
+            <DockPanel Margin="0,2">
                 <Button  Content="{x:Static properties:Resources.Calculate}" DockPanel.Dock="Right"  HorizontalAlignment="Right" Click="RunTemplate_Click" />
-                <TextBlock Text="PoiAnalysis" Width="60"/>
-                <ComboBox x:Name="ComboxTemplate"  SelectedIndex="{Binding TemplateSelectedIndex}" Width="130" HorizontalAlignment="Left" Style="{StaticResource ComboBox.Small}" SelectedValuePath="Value" DisplayMemberPath="Key" />
+                <TextBlock Text="Poi分析" Width="60"/>
+                <ComboBox x:Name="ComboxTemplate"  SelectedIndex="{Binding TemplateSelectedIndex}"  Width="130" HorizontalAlignment="Left" Style="{StaticResource ComboBox.Small}" ItemsSource="{Binding Params}" SelectedValuePath="Value" DisplayMemberPath="Key" />
                 <Grid Width="20" Margin="5,0" HorizontalAlignment="Left">
                     <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="15" Foreground="{DynamicResource GlobalTextBrush}"/>
                     <Button  Width="20" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" Command="{Binding OpenTemplateCommand}"/>
