--- a/Engine/ColorVision.Engine/Templates/Flow/DisplayFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/DisplayFlow.xaml
@@ -34,8 +34,8 @@
                     </TextBlock.RenderTransform>
                 </TextBlock>
             </Button>
-            <Grid  Margin="5,0">
-                <ToggleButton  x:Name="ToggleButton0"  Style="{StaticResource ButtonPageControl1}"   Content="{x:Static properties:Resources.Flow}"  FontSize="15"  IsChecked="True" />
+            <Grid  Margin="0,0">
+                <ToggleButton  x:Name="ToggleButton0"  Style="{StaticResource ButtonPageControl1}"   Content="{x:Static properties:Resources.Workflow}"  FontSize="15"  IsChecked="True" />
                 <Grid  Height="18"   HorizontalAlignment="Left" MouseLeftButtonDown="Grid_MouseLeftButtonDown" Visibility="{Binding ElementName=ToggleButton0,Path=IsChecked,Converter={StaticResource bool2VisibilityConverter}}" Background="{DynamicResource GlobalBackground}" Margin="2,0,0,0">
                     <Image Source="{DynamicResource DrawingImageFlow}"/>
                 </Grid>
