--- a/UI/ColorVision.UI/PropertyEditor/PropertyEditorWindow.xaml
+++ b/UI/ColorVision.UI/PropertyEditor/PropertyEditorWindow.xaml
@@ -28,9 +28,9 @@
                 <ColumnDefinition Width="150"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <TreeView Name="treeView" SelectedItemChanged="TreeView_SelectedItemChanged" Margin="5,5,0,0"/>
+            <TreeView Name="treeView" SelectedItemChanged="TreeView_SelectedItemChanged" Margin="5,5,0,0"   SelectedValuePath="{Binding Name}"/>
             <Border  Grid.Column="1" Margin="5,5,5,0"  Background="{DynamicResource GlobalBackground}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" CornerRadius="5">
-                <ScrollViewer Margin="5">
+                <ScrollViewer x:Name="PropertyScrollViewer" Margin="5">
                     <StackPanel x:Name="PropertyPanel">
 
                     </StackPanel>
