--- a/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
@@ -28,8 +28,8 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Border Grid.Row="0"  Background="{DynamicResource SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" Margin="5,0,5,5" CornerRadius="5">
-                <StackPanel Margin="5">
+            <Border Grid.Row="0"  Background="{DynamicResource SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" Margin="0,0,0,5" CornerRadius="5">
+                <StackPanel Margin="0">
                     <Grid Margin="0,0,0,10">
                         <Viewbox>
                             <StackPanel Orientation="Horizontal">
@@ -104,11 +104,10 @@
 
                     </Grid>
 
-                    <Slider x:Name="ZoomSlider" Value="{Binding CanvasScale}" Maximum="5" Minimum="0.2" />
+                    <Slider x:Name="ZoomSlider" Value="{Binding CanvasScale}" Maximum="5" Minimum="0.2" Margin="0,0,0,5" />
+                    <TextBox x:FieldModifier="public"  x:Name="logTextBox" TextWrapping="WrapWithOverflow" Height="105" Grid.Row="1" Padding="5,5" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" BorderThickness="0"  VerticalAlignment="Stretch" VerticalContentAlignment="Top" IsReadOnly="True" Margin="0,0,0,5" />
+                    <Button Content="查询结果" Click="Button_Click"/>
                 </StackPanel>
-            </Border>
-            <Border Grid.Row="1"  Background="{DynamicResource SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" Margin="5,0,5,5" CornerRadius="5" Height="100">
-                <TextBox x:FieldModifier="public"  x:Name="logTextBox" TextWrapping="WrapWithOverflow" Grid.Row="1" Padding="5,5" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" BorderThickness="0"  VerticalAlignment="Stretch" VerticalContentAlignment="Top" IsReadOnly="True" />
             </Border>
 
             <Border x:Name="SignStackBorder" Grid.Row="3"  Background="{DynamicResource SecondaryRegionBrush}" Visibility="Collapsed" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" Margin="5,0,5,5" CornerRadius="5">
