--- a/Engine/ColorVision.Engine/TestPatternWpf.xaml
+++ b/Engine/ColorVision.Engine/TestPatternWpf.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorVision.Engine"
         mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance local:TestPatternWpfConfig}"
         Title="图卡生成工具" Height="600" Width="1000" Initialized="Window_Initialized">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -15,20 +16,37 @@
             <ComboBox x:Name="cmbPattern" Margin="0,0,0,5"/>
             <ComboBox x:Name="cmbResolution"  Margin="0,0,0,5"/>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                <TextBox x:Name="txtWidth" Width="100" Margin="0,0,5,0"/>
-                <TextBox x:Name="txtHeight" Width="100" Text="480" Margin="0,0,5,0"/>
+                <TextBox x:Name="txtWidth" Width="100" Text="{Binding Width}" Margin="0,0,5,0"/>
+                <TextBox x:Name="txtHeight" Width="100" Text="{Binding Height}" Margin="0,0,5,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock Width="50" Text="Spacing" Margin="0,0,5,0"/>
+                <TextBox Width="100" Text="{Binding Spacing}" Margin="0,0,5,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock Width="50" Text="Radius" Margin="0,0,5,0"/>
+                <TextBox Width="100" Text="{Binding Radius}" Margin="0,0,5,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <Button Content="主色" Width="55" Margin="0,0,5,0" Click="BtnPickMainColor_Click"/>
                 <Rectangle x:Name="rectMainColor" Width="25" Height="25" Stroke="Black" Margin="0,0,5,0"/>
+                <Button Content="R" Margin="0,0,5,0" Click="BtnPickMainColorSet_Click"  Tag="R" />
+                <Button Content="G" Margin="0,0,5,0" Click="BtnPickMainColorSet_Click"  Tag="G"/>
+                <Button Content="B" Margin="0,0,5,0" Click="BtnPickMainColorSet_Click"  Tag="B"/>
+                <Button Content="W" Margin="0,0,5,0" Click="BtnPickMainColorSet_Click"  Tag="W"/>
+                <Button Content="K" Margin="0,0,5,0" Click="BtnPickMainColorSet_Click"  Tag="K"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <Button Content="副色" Width="55" Margin="0,0,5,0" Click="BtnPickAltColor_Click"/>
                 <Rectangle x:Name="rectAltColor" Width="25" Height="25" Stroke="Black" Margin="0,0,5,0"/>
+                <Button Content="R" Margin="0,0,5,0" Click="BtnPickAltColorSet_Click"  Tag="R"/>
+                <Button Content="G" Margin="0,0,5,0" Click="BtnPickAltColorSet_Click"  Tag="G"/>
+                <Button Content="B" Margin="0,0,5,0" Click="BtnPickAltColorSet_Click"  Tag="B"/>
+                <Button Content="W" Margin="0,0,5,0" Click="BtnPickAltColorSet_Click"  Tag="W"/>
+                <Button Content="K" Margin="0,0,5,0" Click="BtnPickAltColorSet_Click"  Tag="K"/>
             </StackPanel>
-
-            <ComboBox x:Name="cmbFormat"  Margin="0,0,0,5"/>
             <Button Content="生成" Click="BtnGenerate_Click" Margin="0,0,0,5"/>
+            <ComboBox x:Name="cmbFormat"  Margin="0,0,0,5"/>
             <Button Content="保存" Click="BtnSave_Click"/>
         </StackPanel>
         <Grid x:Name="DisplayGrid" Grid.Column="1">
