--- a/Engine/ColorVision.Engine/Pattern/TestPatternWpf.xaml
+++ b/Engine/ColorVision.Engine/Pattern/TestPatternWpf.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorVision.Engine.TestPatternWpf"
+﻿<Window x:Class="ColorVision.Engine.Pattern.TestPatternWpf"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Engine"
+        xmlns:local="clr-namespace:ColorVision.Engine.Pattern"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:TestPatternWpfConfig}"
         Title="图卡生成工具" Height="600" Width="1000" Initialized="Window_Initialized">
@@ -13,16 +13,27 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Margin="5">
-            <ComboBox x:Name="cmbPattern" Margin="0,0,0,5"/>
             <ComboBox x:Name="cmbResolution"  Margin="0,0,0,5"/>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <TextBox x:Name="txtWidth" Width="100" Text="{Binding Width}" Margin="0,0,5,0"/>
                 <TextBox x:Name="txtHeight" Width="100" Text="{Binding Height}" Margin="0,0,5,0"/>
             </StackPanel>
+
+            <ComboBox x:Name="cmbPattern1" Margin="0,0,0,5" DisplayMemberPath="Name"/>
+            <Grid x:Name="PatternEditorGrid">
+                
+            </Grid>
+            <Button Content="生成" Click="PatternGen_Click" Margin="0,0,0,5"/>
+
+
+
+
+            <ComboBox x:Name="cmbPattern" Margin="0,0,0,5"/>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <TextBlock Width="50" Text="Spacing" Margin="0,0,5,0"/>
                 <TextBox Width="100" Text="{Binding Spacing}" Margin="0,0,5,0"/>
             </StackPanel>
+
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <TextBlock Width="50" Text="Radius" Margin="0,0,5,0"/>
                 <TextBox Width="100" Text="{Binding Radius}" Margin="0,0,5,0"/>
